--- a/Atfit/Views/Shared/_Layout.cshtml
+++ b/Atfit/Views/Shared/_Layout.cshtml
@@ -6,38 +6,72 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <header>
-
-        <nav id="navbar-example" class="navbar navbar-default navbar-static" role="navigation">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target=".bs-example-js-navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">Menu</a>
-                </div>
-                <div class="navbar-collapse bs-example-js-navbar-collapse collapse" style="height: 1px;">
-                    <ul class="nav navbar-nav">
-                        <li>
-                            <a href="#" role="button">Dropdown</a>
-                        </li>
-                        <li>
-                            <a href="#" role="button">Dropdown 2</a>
-                        </li>
-                    </ul>
-                </div><!-- /.nav-collapse -->
-            </div><!-- /.container-fluid -->
-        </nav> <!-- /navbar-example -->
-
+        <div class="container">
+            <nav id="navbar-example" class="navbar navbar-default navbar-static" role="navigation">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target=".bs-example-js-navbar-collapse">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="#">@@FIT</a>
+                    </div>
+                    <div class="navbar-collapse bs-example-js-navbar-collapse collapse" style="height: 1px;">
+                        <ul class="nav navbar-nav">
+                            <li>
+                                <a href="#" role="button">ABOUT US</a>
+                            </li>
+                            <li>
+                                <a href="#" role="button">STAFF</a>
+                            </li>
+                            <li>
+                                <a href="#" role="button">FACILITY</a>
+                            </li>
+                            <li>
+                                <a href="#" role="button">PROGRAMS</a>
+                            </li>
+                            <li>
+                                <a href="#" role="button">EVENT</a>
+                            </li>
+                            <li>
+                                <a href="#" role="button">CONTACT US</a>
+                            </li>
+                        </ul>
+                    </div><!-- /.nav-collapse -->
+                </div><!-- /.container-fluid -->
+            </nav> <!-- /navbar-example -->
+        </div>
     </header>
     @RenderBody()
     <footer>
-
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h3>Opening Hours</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam est orci, ornare nec mollis vulputate, vestibulum quis nunc. Mauris iaculis dui id neque tempor vulputate. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In scelerisque massa orci, a suscipit odio auctor eu.
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <h3>Contact US</h3>
+                    <p>
+                        Ut non urna vitae metus venenatis condimentum. Integer vel leo ut ligula ultricies gravida nec in dolor. Cras elementum aliquet lectus tempor consequat. Aliquam malesuada, enim at dictum adipiscing, turpis arcu vulputate neque, eu bibendum nulla eros nec leo. Sed nec interdum lacus. Vivamus vestibulum augue vel tellus iaculis sollicitudin ac id dolor. Donec sit amet justo suscipit, elementum eros ac, vehicula diam.
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <h3>About Us</h3>
+                    <p>
+                        Vivamus vestibulum augue vel tellus iaculis sollicitudin ac id dolor. Donec sit amet justo suscipit, elementum eros ac, vehicula diam. Vestibulum adipiscing nisi tellus, eget condimentum magna dapibus vel. Mauris accumsan odio orci, vitae tempus quam volutpat sed.
+                    </p>
+                </div>
+            </div>
+        </div>
     </footer>
     @Scripts.Render("~/bundles/jquery")
     @RenderSection("scripts", required: false)
