--- a/Atfit/Views/Shared/_Layout.cshtml
+++ b/Atfit/Views/Shared/_Layout.cshtml
@@ -20,12 +20,12 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#">@@FIT</a>
+                        <a class="navbar-brand" href="#"></a>
                     </div>
                     <div class="navbar-collapse bs-example-js-navbar-collapse collapse" style="height: 1px;">
                         <ul class="nav navbar-nav">
                             <li>
-                                <a href="#" role="button">ABOUT US</a>
+                                <a href="#" role="button">@@FIT</a>
                             </li>
                             <li>
                                 <a href="#" role="button">STAFF</a>
@@ -34,10 +34,7 @@
                                 <a href="#" role="button">FACILITY</a>
                             </li>
                             <li>
-                                <a href="#" role="button">PROGRAMS</a>
-                            </li>
-                            <li>
-                                <a href="#" role="button">EVENT</a>
+                                <a href="#" role="button">PROGRAMME</a>
                             </li>
                             <li>
                                 <a href="#" role="button">CONTACT US</a>
