--- a/Atfit/Views/Home/Index.cshtml
+++ b/Atfit/Views/Home/Index.cshtml
@@ -58,11 +58,8 @@
     <div class="background-light-gray border-bottom jesus-is-the-lord">
         <div class="container">
             <h2>
-                Introduction
+                Lorem ipsum
             </h2>
-            <p>
-                Aliquam sem nibh, porta vitae pharetra eget, adipiscing dictum nulla. Cras non lacinia velit. Mauris dolor risus, malesuada sed laoreet id, condimentum ac felis.
-            </p>
             <p>
                 Ut sit amet auctor odio, quis tincidunt turpis. Integer elementum semper arcu, molestie pharetra lacus venenatis eu. In hac habitasse platea dictumst. Quisque ultricies enim odio, non sollicitudin velit hendrerit eu. Aenean faucibus mollis ultricies. Curabitur hendrerit eget odio eu consectetur. Vestibulum eget nisi vitae elit ornare vehicula in vel urna. Fusce auctor turpis quis rutrum varius.
             </p>
