--- a/Atfit/Views/Shared/_Layout.cshtml
+++ b/Atfit/Views/Shared/_Layout.cshtml
@@ -24,22 +24,22 @@
                     </div>
                     <div class="navbar-collapse bs-example-js-navbar-collapse collapse" style="height: 1px;">
                         <ul class="nav navbar-nav">
-                            <li>
+                            <li id="about-us-menu">
                                 <a href="@Url.Action("Index", "AboutUs")" role="button">ABOUT US</a>
                             </li>
-                            <li>
-                                <a href="#" role="button">STAFF</a>
+                            <li id="staff-menu">
+                                <a href="@Url.Action("Index", "Staff")" role="button">STAFF</a>
                             </li>
-                            <li>
-                                <a href="#" role="button">FACILITY</a>
+                            <li id="facility-menu">
+                                <a href="@Url.Action("Index", "Facility")" role="button">FACILITY</a>
                             </li>
-                            <li>
-                                <a href="#" role="button">PROGRAMME</a>
+                            <li id="programme-menu">
+                                <a href="@Url.Action("Index", "Programme")" role="button">PROGRAMME</a>
                             </li>
-                            <li>
+                            <li id="contact-us-menu">
                                 <a href="@Url.Action("Index", "ContactUs")" role="button">CONTACT US</a>
                             </li>
-                            <li>
+                            <li id="faq-menu">
                                 <a href="@Url.Action("Index", "FAQ")" role="button">FAQ</a>
                             </li>
                         </ul>
