--- a/Atfit/Content/Site.css
+++ b/Atfit/Content/Site.css
@@ -115,6 +115,13 @@ footer {
     padding: 0;
 }
 
+.navbar-default .navbar-nav > .active > a {
+    color: #333333 !important;
+    background: none !important;
+    box-shadow: none !important;
+    text-decoration: overline;
+}
+
 
 /*Home Page*/
 .home-page .item {
@@ -134,6 +141,11 @@ footer {
 
 .email-form div {
     padding: 5px 0;
+}
+
+.send-button {
+    margin-bottom: 25px;
+    float: right;
 }
 
 
