--- a/Atfit/Views/Programme/Index.cshtml
+++ b/Atfit/Views/Programme/Index.cshtml
@@ -3,8 +3,93 @@
 }
 
 <div class="container">
-    <h2>Programme</h2>
-    <hr />
+    <div class="bs-example bs-example-tabs">
+        <ul id="myTab" class="nav nav-pills" role="tablist">
+            <li class="active"><a href="#tab1" role="tab" data-toggle="tab">How We Can Help</a></li>
+            <li class=""><a href="#tab2" role="tab" data-toggle="tab">What @@FIT is NOT & What You Won't Find at @@FIT</a></li>
+            <li class=""><a href="#tab3" role="tab" data-toggle="tab">What Do I Get?</a></li>
+        </ul>
+        <div id="myTabContent" class="tab-content">
+            <div class="tab-pane fade in active" id="tab1">
+                <div class="jesus-is-the-lord">
+                    <p>
+                        <h3>1:1 Personal Training</h3>
+                        Weight loss<br />
+                        Health care<br />
+                        Strength<br />
+                        Body shaping<br />
+                        Posture restoration<br />
+                    </p>
+                    <p>
+                        <h3>Achieve your goals without losing your lifestyle at @@FIT</h3>
+                        We can help you in as little as 40 Minutes per week – Sound incredible? It is and it works.<br />
+                        And there’s more:<br />
+                        <strong>What if</strong> we told you that we can help you get your best body ever without turning your life upside down to get it?<br />
+                        <strong>What if</strong> we told you that we can provide you with a personalized specific exercise and eating plan that has been proven to produce massive results for hundreds of our one-on-one Clients?<br />
+                        <strong>What if</strong> we showed you how to change your body shape by training LESS not MORE? No more spending hours and hours doing boring exercise or starving yourself.<br />
+                        <strong>What if</strong> we could show you how to lose fat whilst still enjoying all of your favourite foods? Yes that’s right – Pizza’s, Pastas, Ice creams, Steak, Beer, Wine, Cheese and chocolate – No giving up any of your favourite foods, and…<br />
+                        <strong>What if</strong> we promised to be your success coach every single step of the way; helping you to discover and realise your full potential; helping you stay on track and avoid any setbacks; holding you accountable; helping you achieve your best body ever?
+                    </p>
+                </div>
+            </div>
+            <div class="tab-pane fade" id="tab2">
+                <div class="jesus-is-the-lord">
+                    <p>
+                        @@FIT was created for a reason.<br />
+                        To create a one on one non intimidating environment where we can get you RESULTS…F-A-S-T.
+                    </p>
+                    <p>
+                        <h3>
+                            Here is just a short list of what you will most definitely not find at @@FIT
+                        </h3>
+                        •	No Muscle heads<br />
+                        •	No posers<br />
+                        •	No complicated equipment<br />
+                        •	An intimidating environment<br />
+                        •	A ridiculous vigorous exercise program that consumes large amount of your week<br />
+                        •	Exercise programs that deliver NO results or time wasting exercises that get you no results<br />
+                        •	No attention – just another number or getting lost in the crowd<br />
+                        •	Unprofessionalism<br />
+                        •	Not just another number – Every session is designed specifically for you
+                    </p>
+                    <p>
+                        <h3>
+                            Here is a list of what you will find at @@FIT
+                        </h3>
+                        •	Support from day one<br />
+                        •	A home to our clients and friends<br />
+                        •	No time wasting<br />
+                        •	A culture of massive results<br />
+                        •	Your circle of influence<br />
+                        •	Motivating positive environment
+                    </p>
+                </div>
+            </div>
+            <div class="tab-pane fade" id="tab3">
+                <div class="jesus-is-the-lord">
+                    <p>
+                        @@FIT was started with only one goal in mind. To get our clients FANTASTIC results in the shortest time frame possible, with out turning their lives upside down to do it.
+                    </p>
+                    <p>
+                        We understand that people don’t want to live in the gym or follow ridiculous diet plans. We understand that to some people exercise is a scary word or a swear word.
+                    </p>
+                    <p>
+                        We also understand that if you could do it on your own – you would probably be there now and that the best way to achieve any goal is to be coached right to the finish line.
+                    </p>
+                    <p>
+                        We have created a home away from home, a small boutique environment where we have friends, not clients (read our success stories page) come to achieve their goals. Here you are not a membership number, instead more of a family member where everyone knows your name and encourages and supports you to your goal.
+                    </p>
+                    <p>
+                        See below for some of the things that you will experience at @@FIT.
+                    </p>
+                    <div class="row">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 
