--- a/Atfit/Views/Staff/Index.cshtml
+++ b/Atfit/Views/Staff/Index.cshtml
@@ -2,11 +2,74 @@
     ViewBag.Title = "Staff";
 }
 
-<div class="container">
-    <h2>Staff</h2>
-    <hr />
+<div class="training-team">
+    <img src="@Url.Content("~/Content/images/team.png")" />
 </div>
-
+<div class="border-bottom jesus-is-the-lord row">
+    <div class="container">
+        <div class="col-md-4">
+            <img src="@Url.Content("~/Content/images/img04.png")" />
+        </div>
+        <div class="col-md-8">
+            <h2>JUNG YONUG-MO</h2>
+            <p>
+                Ut sit amet auctor odio, quis tincidunt turpis. Integer elementum semper arcu, molestie pharetra lacus venenatis eu. In hac habitasse platea dictumst. Quisque ultricies enim odio, non sollicitudin velit hendrerit eu. Aenean faucibus mollis ultricies. Curabitur hendrerit eget odio eu consectetur. Vestibulum eget nisi vitae elit ornare vehicula in vel urna. Fusce auctor turpis quis rutrum varius.
+            </p>
+        </div>
+    </div>
+</div>
+<div class="background-light-gray border-bottom jesus-is-the-lord row">
+    <div class="container">
+        <div class="col-md-4 float-right">
+            <img src="@Url.Content("~/Content/images/img04.png")" />
+        </div>
+        <div class="col-md-8">
+            <h2>JUNG YONUG-MO</h2>
+            <p>
+                Ut sit amet auctor odio, quis tincidunt turpis. Integer elementum semper arcu, molestie pharetra lacus venenatis eu. In hac habitasse platea dictumst. Quisque ultricies enim odio, non sollicitudin velit hendrerit eu. Aenean faucibus mollis ultricies. Curabitur hendrerit eget odio eu consectetur. Vestibulum eget nisi vitae elit ornare vehicula in vel urna. Fusce auctor turpis quis rutrum varius.
+            </p>
+        </div>
+    </div>
+</div>
+<div class="border-bottom jesus-is-the-lord row">
+    <div class="container">
+        <div class="col-md-4">
+            <img src="@Url.Content("~/Content/images/img04.png")" />
+        </div>
+        <div class="col-md-8">
+            <h2>JUNG YONUG-MO</h2>
+            <p>
+                Ut sit amet auctor odio, quis tincidunt turpis. Integer elementum semper arcu, molestie pharetra lacus venenatis eu. In hac habitasse platea dictumst. Quisque ultricies enim odio, non sollicitudin velit hendrerit eu. Aenean faucibus mollis ultricies. Curabitur hendrerit eget odio eu consectetur. Vestibulum eget nisi vitae elit ornare vehicula in vel urna. Fusce auctor turpis quis rutrum varius.
+            </p>
+        </div>
+    </div>
+</div>
+<div class="background-light-gray border-bottom jesus-is-the-lord row">
+    <div class="container">
+        <div class="col-md-4 float-right">
+            <img src="@Url.Content("~/Content/images/img04.png")" />
+        </div>
+        <div class="col-md-8">
+            <h2>JUNG YONUG-MO</h2>
+            <p>
+                Ut sit amet auctor odio, quis tincidunt turpis. Integer elementum semper arcu, molestie pharetra lacus venenatis eu. In hac habitasse platea dictumst. Quisque ultricies enim odio, non sollicitudin velit hendrerit eu. Aenean faucibus mollis ultricies. Curabitur hendrerit eget odio eu consectetur. Vestibulum eget nisi vitae elit ornare vehicula in vel urna. Fusce auctor turpis quis rutrum varius.
+            </p>
+        </div>
+    </div>
+</div>
+<div class="jesus-is-the-lord row">
+    <div class="container">
+        <div class="col-md-4">
+            <img src="@Url.Content("~/Content/images/img04.png")" />
+        </div>
+        <div class="col-md-8">
+            <h2>JUNG YONUG-MO</h2>
+            <p>
+                Ut sit amet auctor odio, quis tincidunt turpis. Integer elementum semper arcu, molestie pharetra lacus venenatis eu. In hac habitasse platea dictumst. Quisque ultricies enim odio, non sollicitudin velit hendrerit eu. Aenean faucibus mollis ultricies. Curabitur hendrerit eget odio eu consectetur. Vestibulum eget nisi vitae elit ornare vehicula in vel urna. Fusce auctor turpis quis rutrum varius.
+            </p>
+        </div>
+    </div>
+</div>
 
 @section scripts
 {
