--- a/Atfit/Views/FAQ/Index.cshtml
+++ b/Atfit/Views/FAQ/Index.cshtml
@@ -58,7 +58,7 @@
             </div>
             <div id="collapseFour" class="panel-collapse collapse">
                 <div class="panel-body">
-                    We love your enthusiasm! What would be best is to put through your details on the home page or give us a call directly on 021 545 003 so that we can organise a time to get together and chat about your goals. We would love to have a chat with you in person, so you can really make sure that @@FIT is the right place for you.
+                    We love your enthusiasm! What would be best is to put through your details on the home page or give us a call directly on 022 46 28 348 (022 GO AT FIT) so that we can organise a time to get together and chat about your goals. We would love to have a chat with you in person, so you can really make sure that @@FIT is the right place for you.
                 </div>
             </div>
         </div>
