--- a/Atfit/Views/Shared/_Layout.cshtml
+++ b/Atfit/Views/Shared/_Layout.cshtml
@@ -72,7 +72,8 @@
                         <div class="col-sm-2">
                             <span class="glyphicon glyphicon-earphone"></span><br /></div>
                         <div class="col-sm-10">
-                            +64 21 545 003<br />
+                            +64 22 46 28 348<br />
+                            +64 22 GO AT FIT
                         </div>
                     </div>
                 </div>
